tests/NormalTests/paczka2/big_fuzzy/51100151.err
Error in line 3: sRBkT2nrP S416 29,9
Error in line 6: S161 S711 35,0
Error in line 21: 72he17vrIx S711 3,7
Error in line 27: 72he17vrIx S348 4,2
Error in line 33: pSxSBopo S711 94,6
Error in line 35: pSxSBopo S161 82,8
Error in line 39: S161 S711 78,7
Error in line 46: pSxSBopo S161 66,3
Error in line 43: CYYft S161 1,0
Error in line 53: sRBkT2nrP S416 -3,8
Error in line 52: pSxSBopo S161 87,5
Error in line 59: sRBkTnrP S416 68,4
Error in line 65: tgz9SGvTo S711 97,7
Error in line 77: tgz9SGvTo S416 57,3
Error in line 100: pSxSBopo S711 54,54
Error in line 96: sRBkT2nrP S348 73,1
Error in line 98: pSxSBopo S711 50,8
Error in line 99: 72he17vrIx S416 101,5
Error in line 137: sRBkT2nrP S711 14,9
Error in line 134: S161 S711 57,7
Error in line 142: S161 S161 239,1
Error in line 120: tgz9SGvTo S348 127,6
Error in line 147: S161 S416 38,4
Error in line 138: sRBkT2nrP S348 13,8
Error in line 154: sRBkT2nrP S161 61,6
Error in line 161: S161 S711 18,9
Error in line 158: 72he17vrIx S711 71,9
Error in line 166: CYYft S161 95,1
Error in line 175: tgz9SGvTo S711 86,0
Error in line 178: 72he17vrIx S348 213,0
Error in line 174: sRBkT2nrP S416 29,8
Error in line 201: 72he17vrIx S348 90,0
Error in line 197: S161 S348 81,1
Error in line 207: tgz9SGvTo S34e 302,6
Error in line 205: tgz9SGvTo S348 64,1
Error in line 206: CYYft S711 97,7
Error in line 204: S161 S161 80,9
Error in line 213: CYYft S161 27,5
Error in line 210: sRBkT2nrP S711 29,7
Error in line 219: tgz9SGvTo S161 90,6
Error in line 229: S161 S161 22,1
Error in line 231: S161 S348 56,1
Error in line 240: CYYft S161 3,2
Error in line 248: 72he17vrIx S416 19,8
Error in line 249: 72he17vrIx S161 54,1
